--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,18 +1,19 @@
-<%@ page contentType="text/html; charset=ISO-8859-1"
-         pageEncoding="ISO-8859-1" isELIgnored="false" %>
-<?xml version="4.0" encoding="UTF-8" ?>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      lang="en">
 <!DOCTYPE html>
 <html>
 <head>
     <title>Register user</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <link href="${pageContext.request.contextPath}/resources/css/formStyle.css"
-          rel="stylesheet">
+    <link rel="stylesheet" type="text/css"
+          href="../css/formStyle.css"
+          th:href="@{/css/formStyle.css}">
 </head>
 <body>
 <div class="form-style-6">
     <h1>Register new user:<br/></h1>
-    <form method="POST" action="${pageContext.request.contextPath}/admin/register">
+    <form method="POST" action="/admin/register">
         <label><input name="username" type="text" placeholder="User name"/></label>
         <label><input name="password" type="text" placeholder="Password"/></label><br><br>
         <label><input name="USER" type="checkbox" value="USER" checked>USER</label><br><br>
